--- a/fastlane/.env.development
+++ b/fastlane/.env.development
@@ -1,3 +1,4 @@
 PACKAGE_NAME=com.el3sas.zad
 FIREBASE_GOOGLE_SERVICES_JSON=
-FIREBASE_CONDITIONALS_JSON=
+FIREBASE_CONDITIONALS_JSON=./fastlane/google-service-secrets.json
+APP_ID=1:1011258892198:android:cbbc87d231d398b111f967
