--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,6 @@
 stages:
   - setup
   - build
-  - deploy
 
 variables:
   RUBY_VERSION: "3.2.2"
@@ -9,10 +8,10 @@ variables:
 
 before_script:
   - apt-get update && apt-get install -y curl
-  - curl -sL https://deb.nodesource.com/setup_14.x | bash -
+  - curl -sL https://deb.nodesource.com/setup_18.x | bash -
   - apt-get install -y nodejs
-  - npm install -g firebase-tools
-  - chmod +x ./gradlew
+  - npm install -g npm@latest # تحديث `npm`
+  - chmod +x ./gradlew # إذا كنت تستخدم Gradle
 
 setup:
   stage: setup
@@ -24,6 +23,6 @@ setup:
 build:
   stage: build
   script:
-    - echo "Setting up Java $JAVA_VERSION"
     - apt-get install -y openjdk-17-jdk
+    - java -version
     - bundle exec fastlane distribute
