--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,17 +13,21 @@ before_script:
   - npm install -g npm@latest
   - apt-get install -y ruby-full
   - gem install bundler
+  - gem install fastlane
   - chmod +x ./gradlew
 
 setup:
   stage: setup
   script:
+    - ruby -v
+    - bundler -v
+    - fastlane -v
     - bundle install
-    - gem install fastlane
 
 build:
   stage: build
   script:
     - apt-get install -y openjdk-17-jdk
     - java -version
+    - fastlane -v
     - bundle exec fastlane distribute
