--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,13 +13,17 @@ before_script:
   - npm install -g npm@latest
   - apt-get install -y ruby-full
   - gem install bundler
+  - gem install fastlane
+  - bundle install
   - chmod +x ./gradlew
 
 setup:
   stage: setup
   script:
-    - bundle install --jobs=4 --retry=3
-    - gem install fastlane
+    - ruby -v
+    - bundler -v
+    - fastlane -v
+    - bundle install
 
 build:
   stage: build
