--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,7 +5,7 @@ stages:
 variables:
   RUBY_VERSION: "3.2.2"
   JAVA_VERSION: "17"
-  ANDROID_HOME: "/opt/android-sdk-linux"  # Set to the desired SDK path (adjust based on your runner)
+  ANDROID_HOME: "/path/to/android/sdk"  # Set this to the path where the SDK is located on your CI runner
   GRADLE_USER_HOME: "$CI_PROJECT_DIR/.gradle"  # Optional, caches Gradle dependencies
 
 
@@ -18,6 +18,7 @@ before_script:
   - gem install bundler
   - gem install fastlane
   - bundle install
+  - echo "sdk.dir=$ANDROID_HOME" > local.properties  # Create local.properties dynamically
   - mkdir -p "$ANDROID_HOME"
   - curl -sL https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip -o commandlinetools.zip
   - unzip commandlinetools.zip -d "$ANDROID_HOME"
