--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,7 @@ variables:
   RUBY_VERSION: "3.2.2"
   JAVA_VERSION: "17"
   ANDROID_HOME: "/usr/local/android-sdk"
-  ANDROID_SDK_CMDLINE_TOOLS: "/usr/local/android-sdk/cmdline-tools"
+  ANDROID_SDK_CMDLINE_TOOLS: "/usr/local/android-sdk/cmdline-tools/latest"
   ANDROID_SDK_URL: "https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip"
 
 before_script:
@@ -22,13 +22,15 @@ before_script:
   - apt-get install -y openjdk-17-jdk
   - java -version
 
-  # Setup Android SDK
+  # إعداد SDK الأندرويد
   - mkdir -p ${ANDROID_HOME}/cmdline-tools
   - curl -sL ${ANDROID_SDK_URL} -o android-cmdline-tools.zip
   - unzip android-cmdline-tools.zip -d ${ANDROID_HOME}/cmdline-tools
   - rm android-cmdline-tools.zip
-  - yes | ${ANDROID_HOME}/cmdline-tools/bin/sdkmanager --sdk_root=${ANDROID_HOME} "platform-tools" "build-tools;30.0.3" "platforms;android-30"
-  - yes | ${ANDROID_HOME}/cmdline-tools/bin/sdkmanager --licenses
+  # تأكد من أن الأدوات تم استخراجها في المسار الصحيح
+  - mv ${ANDROID_HOME}/cmdline-tools/cmdline-tools ${ANDROID_SDK_CMDLINE_TOOLS}
+  - yes | ${ANDROID_SDK_CMDLINE_TOOLS}/bin/sdkmanager --sdk_root=${ANDROID_HOME} "platform-tools" "build-tools;30.0.3" "platforms;android-30"
+  - yes | ${ANDROID_SDK_CMDLINE_TOOLS}/bin/sdkmanager --licenses
 
 setup:
   stage: setup
