--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ default:
     - apt-get install -y openjdk-${JAVA_VERSION}-jdk
     - java -version
 
-setup:
+deploy to development:
   stage: development
   script:
     - echo "Starting the Android build"
