--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,8 +26,13 @@ deploy to development:
     - bundle exec fastlane distribute
 
   only:
-    - /^feature.*$/
-    - /^feat.*$/
+    refs:
+      - /^feature.*$/
+      - /^feat.*$/
+      - development
+    variables:
+      # Check if the last commit has a tag
+      - $CI_COMMIT_TAG
 
 deploy to production:
   stage: development
