--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ deploy to development:
        - development
        - tags
      variables:
+       - $CI_COMMIT_TAG
 
 deploy to production:
   stage: development
