--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,7 @@ deploy to development:
   script:
     - echo "Starting the Android build"
     - bundle install
+    - bundle exec fastlane update_version_from_branch_tag
     - bundle exec fastlane distribute
 
   only:
