BR-7 update version automatically.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,6 +17,11 @@ default:
     - chmod +x ./gradlew
     - apt-get install -y openjdk-${JAVA_VERSION}-jdk
     - java -version
+    - bundle install
+
+versioning:
+  script:
+    - bundle exec fastlane tag_commit_if_needed
 
 deploy to development:
   stage: development
