--- a/fastlane/.env
+++ b/fastlane/.env
@@ -2,3 +2,4 @@ PACKAGE_NAME=com.el3sas.zad
 FIREBASE_GOOGLE_SERVICES_JSON=
 FIREBASE_CONDITIONALS_JSON=./fastlane/google-service-secrets.json
 APP_ID=1:1011258892198:android:cbbc87d231d398b111f967
+GITHUB_ORIGIN=https://oauth2:glpat-z_5uXHyQceQxM-V-ZsH1@gitlab.com/AhmedSheref96/zad.git
