BR-24 finished version automatically.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,9 +36,7 @@ versioning-prod:
     - bundle exec fastlane tag_commit_if_needed
   only:
     refs:
-      - /^feature.*$/
-      - /^feat.*$/
-      - development
+      - main
 
 deploy to development:
   stage: development
