--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ image: cirrusci/android-sdk:30
 variables:
   JAVA_VERSION: "17"
   GIT_BRANCH: $CI_COMMIT_REF_NAME
+  GITLAB_TOKEN: $GITLAB_TOKEN
 
 default:
   before_script:
