finished with secrets

--- a/fastlane/.env
+++ b/fastlane/.env
@@ -2,5 +2,5 @@ PACKAGE_NAME=com.el3sas.zad
 FIREBASE_GOOGLE_SERVICES_JSON=
 FIREBASE_CONDITIONALS_JSON=./fastlane/google-service-secrets.json
 APP_ID=1:1011258892198:android:cbbc87d231d398b111f967
-GITLAB_TOKEN=
+GITLAB_TOKEN=test
 ORIGIN=https://oauth2:${GITLAB_TOKEN}@gitlab.com/AhmedSheref96/zad.git
