--- a/.github/workflows/production-workflow.yml
+++ b/.github/workflows/production-workflow.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Set execute permission for gradlew (if using Gradle)
         run: chmod +x ./gradlew
       - name: set branch name
-        run: export GIT_BRANCH=$github.ref_name
+        run: export GIT_BRANCH=${{ github.ref_name }}
 
       - name: Run Fastlane Lane
         run: bundle exec fastlane tag_commit_if_needed
