--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -11,6 +11,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      ORIGIN: ${{ secrets.ORIGIN }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
