--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeBom = "2024.04.01"
 googleServices = "4.4.2"
 firebaseBom = "33.6.0"
 firebaseCrashlytics = "3.0.2"
+appcompat = "1.7.0"
+material = "1.12.0"
 
 
 [libraries]
@@ -31,9 +33,12 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 firebaseBom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
 firebaseAnalyticsKtx = { module = "com.google.firebase:firebase-analytics-ktx" }
 firebaseCrashlyticsKtx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 googleServices = { id = "com.google.gms.google-services", version.ref = "googleServices" }
 firebaseCrashlytics = { id = "com.google.firebase.crashlytics", version.ref = "firebaseCrashlytics" }
+android-library = { id = "com.android.library", version.ref = "agp" }
