--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,6 +13,7 @@ firebaseBom = "33.6.0"
 firebaseCrashlytics = "3.0.2"
 appcompat = "1.7.0"
 material = "1.12.0"
+uiTextGoogleFonts = "1.7.5"
 
 
 [libraries]
@@ -35,6 +36,7 @@ firebaseAnalyticsKtx = { module = "com.google.firebase:firebase-analytics-ktx" }
 firebaseCrashlyticsKtx = { module = "com.google.firebase:firebase-crashlytics-ktx" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
+androidx-ui-text-google-fonts = { group = "androidx.compose.ui", name = "ui-text-google-fonts", version.ref = "uiTextGoogleFonts" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
