--- a/.github/workflows/production-workflow.yml
+++ b/.github/workflows/production-workflow.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
       - master
-    tags:
-      - 'v-*'
 
 jobs:
   build:
@@ -21,6 +19,16 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Check for Tag in Commit
+        run: |
+          TAG=$(git describe --tags --exact-match 2>/dev/null || echo "")
+          if [[ -n "$TAG" ]]; then
+            echo "The commit has a tag: $TAG"
+          else
+            echo "No tag found on the commit."
+            exit 1  # أو يمكن استكمال المهام الأخرى إذا لم يكن هناك تاج
+          fi
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
