--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -18,20 +18,11 @@ jobs:
 
     env:
       ORIGIN: ${{ secrets.ORIGIN }}
+      if: ${{ github.event.ref_type == 'tag' && github.ref_name == 'v-*' }}
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Check for Tag in Commit
-        run: |
-          TAG=$(git describe --tags --exact-match 2>/dev/null || echo "")
-          if [[ -n "$TAG" ]]; then
-            echo "The commit has a tag: $TAG"
-          else
-            echo "No tag found on the commit."
-            exit 1  # أو يمكن استكمال المهام الأخرى إذا لم يكن هناك تاج
-          fi
 
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
