handle secrets.json security

--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -21,6 +21,11 @@ jobs:
       ORIGIN: ${{ secrets.ORIGIN }}
 
     steps:
+      - name: Decode Google Service Secrets
+        run: echo "$GOOGLE_SERVICE_SECRETS" > fastlane/google-service-secrets.json
+        env:
+          GOOGLE_SERVICE_SECRETS: ${{ secrets.GOOGLE_SERVICE_SECRETS }}
+
       - name: Checkout code
         uses: actions/checkout@v4
 
