--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.7.3"
 coilCompose = "3.0.4"
 constraintlayoutCompose = "1.1.0"
+core = "12.1.1"
 hiltAndroid = "2.51.1"
 hiltWorker = "1.2.0"
 hiltNavigationCompose = "1.2.0"
@@ -38,6 +39,7 @@ coil-network-okhttp = { module = "io.coil-kt.coil3:coil-network-okhttp", version
 
 androidx-hilt-worker = { module = "androidx.hilt:hilt-work", version.ref = "hiltWorker" }
 androidx-hilt-worker-compiler = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltWorker" }
+androidyoutubeplayer-core = { module = "com.pierfrancescosoffritti.androidyoutubeplayer:core", version.ref = "core" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
 
