--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    if: ${{ github.event.ref_type == 'tag' && github.ref_name == 'v-*' }}
+    if: ${{ github.event.ref_type == 'tag' }}
 
     permissions:
       contents: write
