--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -28,6 +28,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Check if Tag starts with "v-"
+        if: ${{ github.event.ref_type == 'tag' && startsWith(github.ref_name, 'v-') }}
+        run: echo "Deploying version = ${{ github.ref_name }}"
+
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
