--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -20,6 +20,13 @@ jobs:
       ORIGIN: ${{ secrets.ORIGIN }}
 
     steps:
+      - name: Create Google Service Secrets file safely
+        run: |
+          mkdir -p fastlane
+          printf "%s" "$GOOGLE_SERVICE_SECRETS" > fastlane/google-service-secrets.json
+        env:
+          GOOGLE_SERVICE_SECRETS: ${{ secrets.GOOGLE_SERVICE_SECRETS }}
+
       - name: Decode Google Service Secrets
         run: echo "$GOOGLE_SERVICE_SECRETS" > fastlane/google-service-secrets.json
         env:
