--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -8,6 +8,10 @@ on:
       - feature*
     tags:
       - 'v-*'
+workflow_run:
+  workflows: ["Development"]
+  types:
+    - completed
 
 jobs:
   build:
