testCi:update ci

--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -31,6 +31,9 @@ jobs:
           file ./fastlane/google-service-secrets.json
           cat ./fastlane/google-service-secrets.json
 
+      - name: Fix permissions
+        run: chmod 644 ./fastlane/google-service-secrets.json
+
       - name: Checkout code
         uses: actions/checkout@v4
 
