--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -23,8 +23,7 @@ jobs:
 
       - name: Create Google Service Secrets file
         run: |
-          mkdir -p ./fastlane
-          echo "$GOOGLE_SERVICE_SECRETS" | base64 -d > ./fastlane/google-service-secrets.json
+          echo "$GOOGLE_SERVICE_SECRETS" | base64 -d > google-service-secrets.json
         env:
           GOOGLE_SERVICE_SECRETS: ${{ secrets.GOOGLE_SERVICE_SECRETS }}
 
@@ -34,12 +33,8 @@ jobs:
 
       - name: Validate file creation
         run: |
-          ls -la ./fastlane
-          file ./fastlane/google-service-secrets.json
-          cat ./fastlane/google-service-secrets.json
-
-      - name: Fix permissions
-        run: chmod 644 ./fastlane/google-service-secrets.json
+          file google-service-secrets.json
+          cat google-service-secrets.json
 
       - name: Check if Tag starts with "v-"
         if: ${{ (github.event.ref_type == 'tag' && startsWith(github.ref_name, 'v-'))||startsWith(github.ref_name, 'testCi') }}
