--- a/.github/workflows/development-workflow.yml
+++ b/.github/workflows/development-workflow.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Debug Path
         run:
-          echo "Current path: $(pwd)"
+          echo "Current path = $(pwd)"
 
       - name: Validate file creation
         run: |
