--- a/fastlane/.env
+++ b/fastlane/.env
@@ -1,5 +1,5 @@
 PACKAGE_NAME=com.el3sas.zad
 FIREBASE_GOOGLE_SERVICES_JSON=
-FIREBASE_CONDITIONALS_JSON=./fastlane/google-service-secrets.json
+FIREBASE_CONDITIONALS_JSON=google-service-secrets.json
 APP_ID=1:1011258892198:android:cbbc87d231d398b111f967
 ORIGIN=
