--- a/.github/workflows/production-workflow.yml
+++ b/.github/workflows/production-workflow.yml
@@ -17,20 +17,15 @@ jobs:
       ORIGIN: ${{ secrets.ORIGIN }}
 
     steps:
-      - name: Create Google Service Secrets file safely
-        run: |
-          mkdir -p fastlane
-          printf "%s" "$GOOGLE_SERVICE_SECRETS" > google-service-secrets.json
-        env:
-          GOOGLE_SERVICE_SECRETS: ${{ secrets.GOOGLE_SERVICE_SECRETS }}
-
-      - name: Decode Google Service Secrets
-        run: echo "$GOOGLE_SERVICE_SECRETS" > google-service-secrets.json
-        env:
-          GOOGLE_SERVICE_SECRETS: ${{ secrets.GOOGLE_SERVICE_SECRETS }}
-
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Create Google Service Secrets file
+        run: |
+          echo "$GOOGLE_SERVICE_SECRETS" | base64 -d > google-service-secrets.json
+        env:
+          GOOGLE_SERVICE_SECRETS: ${{ secrets.GOOGLE_SERVICE_SECRETS }}
+
 
       - name: Check if Tag starts with "v-"
         if: ${{ (github.event.ref_type == 'tag' && startsWith(github.ref_name, 'v-'))||startsWith(github.ref_name, 'testCi') }}
@@ -72,3 +67,7 @@ jobs:
 
       - name: deploy to development
         run: bundle exec fastlane distribute
+
+      - name: Cleanup secrets
+        run: rm -f ./fastlane/google-service-secrets.json
+        if: always()
