testCi:update ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,63 +1,38 @@
 stages:
-  - development
-  - production
-
-image: cirrusci/android-sdk:30
+  - build
+  - deploy
 
 variables:
   JAVA_VERSION: "17"
-  GIT_BRANCH: $CI_COMMIT_REF_NAME
+  LC_ALL: "en_US.UTF-8"
+  LANG: "en_US.UTF-8"
 
-default:
-  before_script:
-    - apt-get update && apt-get install -y ruby-full curl unzip
-    - ruby -v
-    - gem install bundler fastlane
-    - bundler -v
-    - fastlane -v
-    - chmod +x ./gradlew
-    - apt-get install -y openjdk-${JAVA_VERSION}-jdk
-    - java -version
-    - bundle install
+image: cirrusci/android-sdk:33
 
-#versioning-dev:
-#  stage: development
-#  script:
-#    - bundle exec fastlane tag_commit_if_needed
-#  only:
-#    refs:
-#      - /^feature.*$/
-#      - /^feat.*$/
-#      - development
-#
-#versioning-prod:
-#  stage: production
-#  script:
-#    - bundle exec fastlane tag_commit_if_needed
-#  only:
-#    refs:
-#      - main
+before_script:
+  - apt-get update -qq && apt-get install -y -qq ruby-full unzip
+  - gem install bundler
+  - bundle install
 
-deploy to development:
-  stage: development
+deploy_to_development:
+  stage: deploy
   script:
-    - echo "Starting the Android build"
-    - bundle install
-    - bundle exec fastlane distribute
+    - cp $CI_SECURE_FILES/google-service-secrets.json ./
+    - chmod 644 google-service-secrets.json
+    - ls -la
+    - bundle exec fastlane distribute_development
   only:
-    refs:
-      - tags
-    variables:
-      - $CI_COMMIT_TAG =~ /^v-.*/
+    - tags
+    - /^v-dev-.*/
 
-deploy to production:
-  stage: development
+deploy_to_production:
+  stage: deploy
   script:
-    - echo "Starting the Android build"
-    - bundle install
-    - bundle exec fastlane distribute
-
+    - cp $CI_SECURE_FILES/google-service-secrets.json ./
+    - chmod 644 google-service-secrets.json
+    - bundle exec fastlane distribute_production
   only:
     - main
-  variables:
-    - $CI_COMMIT_TAG =~ /^v-.*/
+
+after_script:
+  - rm -f google-service-secrets.json
