testCi:update ci

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,7 @@ image: cirrusci/android-sdk:33
 
 before_script:
   - apt-get update -qq
-  # Install essential tools
   - apt-get install -y -qq coreutils file jq ruby-full unzip
-  # Fix rubyzip version before bundle install
   - sed -i "s/gem 'rubyzip'/gem 'rubyzip', '~> 2.3.0'/" Gemfile
   - gem install bundler
   - bundle install
@@ -20,29 +18,11 @@ before_script:
 deploy_to_development:
   stage: deploy
   script:
-    # 1. Base64 decoding with validation
     - echo "Decoding secrets..."
-    - echo "$GOOGLE_SERVICE_SECRETS" | base64 --decode > "${SECRETS_FILE}" || {
-      echo "DECODE_ERROR = Invalid Base64 input";
-      exit 1;
-    }
-
-    # 2. File validation
-    - test -s "${SECRETS_FILE}" || {
-      echo "FILE_ERROR = Empty/missing secrets file";
-      exit 1;
-    }
-
-    # 3. JSON validation
-    - jq empty "${SECRETS_FILE}" || {
-      echo "JSON_ERROR = Invalid JSON structure";
-      exit 1;
-    }
-
-    # 4. Secure permissions
+    - echo "$GOOGLE_SERVICE_SECRETS" | base64 --decode > "${SECRETS_FILE}" || { echo "DECODE_ERROR= Invalid Base64 input"; exit 1; }
+    - test -s "${SECRETS_FILE}" || { echo "FILE_ERROR= Empty/missing secrets file"; exit 1; }
+    - jq empty "${SECRETS_FILE}" || { echo "JSON_ERROR= Invalid JSON structure"; exit 1; }
     - chmod 600 "${SECRETS_FILE}"
-
-    # 5. Execute deployment
     - bundle exec fastlane distribute_development
   only:
     - tags
