--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,6 +20,24 @@ default:
     - java -version
     - bundle install
 
+#versioning-dev:
+#  stage: development
+#  script:
+#    - bundle exec fastlane tag_commit_if_needed
+#  only:
+#    refs:
+#      - /^feature.*$/
+#      - /^feat.*$/
+#      - development
+#
+#versioning-prod:
+#  stage: production
+#  script:
+#    - bundle exec fastlane tag_commit_if_needed
+#  only:
+#    refs:
+#      - main
+
 deploy to development:
   stage: development
   script:
@@ -27,10 +45,10 @@ deploy to development:
     - bundle install
     - bundle exec fastlane distribute
   only:
-    - tags
-    - development
-  variables:
-    - $CI_COMMIT_TAG =~ /^v-.*/
+    refs:
+      - tags
+    variables:
+      - $CI_COMMIT_TAG =~ /^v-.*/
 
 deploy to production:
   stage: development
