--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -50,7 +50,7 @@ deploy to development:
     - $CI_COMMIT_TAG =~ /^v-.*/
 
 deploy to production:
-  stage: development
+  stage: production
   script:
     - echo "Starting the Android build"
     - bundle install
